# vulkan-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: application.cpp  pch.hpp
src/logging/: logger.cpp  logger.hpp
